testdata/e2e/examples/negative-testing/script/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: negative-script
spec:
  steps:
  - try:
    - script:
        content: kubectl get foo
        check:
          ($error != null): true
          ($stderr): |-
            error: the server doesn't have a resource type "foo"
